# N-body-simultaion_Barnes-Hut

./: .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  Makefile  PHYSICS_FIXES.md  QUICKSTART.md  README.md  README_MODULAR.md  SUMMARY.md  USAGE_EXAMPLES.md  benchmark_barnes_hut.txt  benchmark_comparison.txt  benchmark_n_squared.txt  benchmark_results.txt  body.cpp  docker-compose.yml  main.cpp  run_benchmark.sh  tres2.cpp
database/: init.sql
database/queries/: benchmarks.sql  users.sql
include/: AuthManager.h  BarnesHutSimulator.h  Benchmark.h  BruteForceSimulator.h  Cell.h  Constants.h  ISimulator.h  Menu.h  QueryLoader.h  RuStrings.h  Star.h  Utils.h
src/: AuthManager.cpp  BarnesHutSimulator.cpp  Benchmark.cpp  BruteForceSimulator.cpp  Cell.cpp  Menu.cpp  QueryLoader.cpp  Utils.cpp  main.cpp
